--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -25,7 +25,8 @@
     "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
-    "test": "jest --coverage --runInBand --setupFiles=dotenv/config --silent"
+    "test": "jest --coverage --runInBand --setupFiles=dotenv/config --silent",
+    "publish":"build && version patch && publish"
   },
   "devDependencies": {
     "@medusajs/medusa": "^1.8.2",
