--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "4.4.3",
+  "version": "4.4.4",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "index.js",
   "types": "index.d.ts",
@@ -26,7 +26,7 @@
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
     "test": "jest --coverage --runInBand --setupFiles=dotenv/config --silent",
-    "publish":"build && version patch && publish"
+    "publish": "yarn run build && npm version patch && npm publish"
   },
   "devDependencies": {
     "@medusajs/medusa": "^1.8.2",
