--- a/packages/medusa-strapi/Dockerfile
+++ b/packages/medusa-strapi/Dockerfile
@@ -29,6 +29,7 @@ WORKDIR /app
 
 COPY ./package*.json ./
 COPY ./package.json ./
+COPY ./public ./public
 RUN mkdir ./config
 RUN mkdir ./data
 RUN mkdir ./src
