--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "**/parse-url":"^8.1.0",
     "**/sharp":"0.32.0",
     "**/class-validator":"^0.14.0",
+    "**/engine.io":"^6.4.2",    
     "**/strapi-plugin-multi-country-select":"npm:@sgftech/plugin-multi-country-select"
   }
 }
