--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -77,6 +77,7 @@
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "medusa-core-utils": "^1.1.37",
-    "medusa-test-utils": "^1.1.37"
+    "medusa-test-utils": "^1.1.37",
+    "update-notifier": "^6.0.2"
   }
 }
