--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -1,8 +1,8 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "4.4.10",
+  "version": "4.4.10-next",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
-  "main": "index.js",
+  "main": "dist/index.js",
   "types": "index.d.ts",
   "repository": {
     "type": "git",
@@ -22,8 +22,8 @@
   "license": "MIT",
   "scripts": {
     "integration-test": "yarn test",
-    "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
-    "build": "npm run clean && tsc -p tsconfig.json",
+    "clean": "./node_modules/.bin/rimraf types/ services/ models/ migrations/ api/ subscribers/ utils/ dist/ index.js index.map.js",
+    "build": "npm run clean &&  tsc -p ./src/",
     "watch": "tsc --watch",
     "test": "jest --coverage --runInBand --setupFiles=dotenv/config --silent"
   },
