WIP:hashed data

--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -50,6 +50,7 @@
     "i": "^0.3.7",
     "koa-passport": "^5.0.0",
     "npm": "^8.12.1",
+    "object-hash": "^3.0.0",
     "patch-package": "^6.5.0",
     "pg": "8.6.0",
     "qs": "^6.11.0",
