--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -31,17 +31,17 @@
     "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "4.9.2",
-    "@strapi/plugin-documentation": "4.9.2",
-    "@strapi/plugin-i18n": "4.9.2",
-    "@strapi/plugin-sentry": "4.9.2",
+    "@strapi/logger": "4.10.5",
+    "@strapi/plugin-documentation": "4.10.5",
+    "@strapi/plugin-i18n": "4.10.5",
+    "@strapi/plugin-sentry": "4.10.5",
     "@strapi/plugin-seo": "1.7.5",
-    "@strapi/plugin-upload": "4.9.2",
-    "@strapi/plugin-users-permissions": "4.9.2",
-    "@strapi/provider-email-sendgrid": "4.9.2",
-    "@strapi/provider-upload-aws-s3": "4.9.2",
-    "@strapi/provider-upload-local": "4.9.2",
-    "@strapi/strapi": "4.9.2",
+    "@strapi/plugin-upload": "4.10.5",
+    "@strapi/plugin-users-permissions": "4.10.5",
+    "@strapi/provider-email-sendgrid": "4.10.5",
+    "@strapi/provider-upload-aws-s3": "4.10.5",
+    "@strapi/provider-upload-local": "4.10.5",
+    "@strapi/strapi": "4.10.5",
     "add": "^2.0.6",
     "codemirror": "5.65.11",
     "css-loader": "^6.7.1",
@@ -50,6 +50,7 @@
     "i": "^0.3.7",
     "koa-passport": "^5.0.0",
     "npm": "^8.12.1",
+    "object-hash": "^3.0.0",
     "patch-package": "^6.5.0",
     "pg": "8.6.0",
     "qs": "^6.11.0",
@@ -89,7 +90,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@strapi/admin": "4.9.2",
+    "@strapi/admin": "4.10.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
