fix: refresh token

--- a/packages/medusa-plugin-strapi-ts/tsconfig.json
+++ b/packages/medusa-plugin-strapi-ts/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
 	  "experimentalDecorators": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowJs": false,
       "rootDir": "src",
       "baseUrl": "./",
