--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -11,6 +11,7 @@
   "keywords": [
     "medusa",
     "medusajs",
+    "medusa-plugin-cms",
     "strapi",
     "typescript",
     "plugin",
@@ -77,6 +78,7 @@
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "medusa-core-utils": "^1.1.37",
-    "medusa-test-utils": "^1.1.37"
+    "medusa-test-utils": "^1.1.37",
+    "update-notifier": "^6.0.2"
   }
 }
