--- a/packages/medusa-plugin-strapi-ts/tsconfig.json
+++ b/packages/medusa-plugin-strapi-ts/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": false,
       "rootDir": "src",
       "baseUrl": "./",
-      "outDir": "./"
+      "outDir": "./dist"
 
   },
   "extends": "../../tsconfig.json",
