fix: 1. added code to refresh the user tokens if the token times out, 2. fixed that the server automatically switches to port 443 if the protocol specified is https:

--- a/packages/medusa-plugin-strapi-ts/tsconfig.json
+++ b/packages/medusa-plugin-strapi-ts/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
 	  "experimentalDecorators": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowJs": false,
       "rootDir": "src",
       "baseUrl": "./",
-      "outDir": "./"
+      "outDir": "./dist"
 
   },
   "extends": "../../tsconfig.json",
