fix: handle secure rds

--- a/packages/medusa-strapi/Dockerfile
+++ b/packages/medusa-strapi/Dockerfile
@@ -43,6 +43,8 @@ ENV NODE_ENV production
 
 RUN yarn install --ignore-platform --network-timeout 10000000 && yarn build
 
+RUN yarn cache clean
+
 #EXPOSE 1337
 
 CMD ["yarn", "start"]
