--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -26,14 +26,14 @@
     "clean": "./node_modules/.bin/rimraf dist/ types/ services/ models/ migrations/ api/ subscribers/ utils/ index.js index.map.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "watch": "tsc --watch",
-    "test": "jest --coverage --runInBand --setupFiles=dotenv/config --silent"
+    "test": "jest --coverage --runInBand --setupFiles=dotenv/config "
   },
   "devDependencies": {
     "@medusajs/medusa": "^1.8.2",
     "@strapi/plugin-users-permissions": "^4.6.1",
     "@types/express": "^4.17.14",
     "@types/jest": "^27.4.0",
-    "@types/jsonwebtoken": "^8.5.9",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -77,7 +77,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "generate-password": "^1.7.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "medusa-core-utils": "^1.1.37",
     "medusa-test-utils": "^1.1.37",
     "update-notifier": "^6.0.2"
