--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
 		"esModuleInterop": true,
 		"incremental": false
 	},
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
+	"include": ["packages/**/src/**/*"]
 }
