--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -116,6 +116,7 @@
     "@lezer/common": "^1.0.0"
   },
   "resolutions": {
-    "codemirror": "5.65.11"
+    "codemirror": "5.65.11",
+    "**/strapi-plugin-multi-country-select":"npm:@sgftech/strapi-plugin-multi-country-select"
   }
 }
