--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/util-format-url": "^3.78.0",
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
+    "@sgftech/plugin-multi-country-select": "^1.0.2",
     "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
