--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "4.4.15-next-3",
+  "version": "4.4.15",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
