--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-strapi",
-  "private": false,
+  "private": true,
   "version": "0.1.4",
   "type": "commonjs",
   "description": "Strapi Implementation for medusa market ",
@@ -27,8 +27,6 @@
     "@aws-sdk/util-format-url": "^3.78.0",
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.9",
-    "@sgftech/plugin-multi-country-select": "^1.0.2",
-    "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
     "@strapi/logger": "4.11.7",
@@ -57,6 +55,7 @@
     "qs": "^6.11.0",
     "sentry": "^0.1.2",
     "sharp": "^0.32.4",
+    "strapi-plugin-sgftech-multi-country-select":"^1.0.2",
     "strapi-google-translator": "^1.0.7",
     "strapi-html-editor": "^1.0.2",
     "strapi-middleware-cache": "^2.1.8",
