--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -91,8 +91,8 @@
     "@strapi/admin": "4.12.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "babel-jest": "^29.4.3",
     "babel-loader": "^9.1.0",
     "better-sqlite3": "7.4.6",
@@ -114,6 +114,17 @@
     "@lezer/common": "^1.0.0"
   },
   "resolutions": {
-    "codemirror": "5.65.11"
+      "**/codemirror": "5.65.11",
+      "**/protobufjs":"^7.2.4",
+      "**/tough-cookie":"^4.1.3",
+      "**/node-fetch":"^2.6.7",
+      "**/follow-redirects":"^1.14.8",
+      "**/axios":"0.27.2",
+      "**/jsonwebtoken":"^9.0.0",
+      "**/@strapi/utils":"4.12.5",
+      "**/semver":"^7.5.2",
+      "**/word-wrap":"^1.2.4",
+      "**/fast-xml-parse":"^4.2.4"
   }
+
 }
