--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -31,17 +31,17 @@
     "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "4.11.7",
-    "@strapi/plugin-documentation": "4.11.7",
-    "@strapi/plugin-i18n": "4.11.7",
-    "@strapi/plugin-sentry": "4.11.7",
+    "@strapi/logger": "4.12.5",
+    "@strapi/plugin-documentation": "4.12.5",
+    "@strapi/plugin-i18n": "4.12.5",
+    "@strapi/plugin-sentry": "4.12.5",
     "@strapi/plugin-seo": "1.7.5",
-    "@strapi/plugin-upload": "4.11.7",
-    "@strapi/plugin-users-permissions": "4.11.7",
-    "@strapi/provider-email-sendgrid": "4.11.7",
-    "@strapi/provider-upload-aws-s3": "4.11.7",
-    "@strapi/provider-upload-local": "4.11.7",
-    "@strapi/strapi": "4.11.7",
+    "@strapi/plugin-upload": "4.12.5",
+    "@strapi/plugin-users-permissions": "4.12.5",
+    "@strapi/provider-email-sendgrid": "4.12.5",
+    "@strapi/provider-upload-aws-s3": "4.12.5",
+    "@strapi/provider-upload-local": "4.12.5",
+    "@strapi/strapi": "4.12.5",
     "add": "^2.0.6",
     "codemirror": "5.65.11",
     "css-loader": "^6.7.1",
@@ -79,7 +79,7 @@
     "telemetryDisabled": true
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=12.x.x <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT",
@@ -88,11 +88,11 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@strapi/admin": "4.11.7",
+    "@strapi/admin": "4.12.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "babel-jest": "^29.4.3",
     "babel-loader": "^9.1.0",
     "better-sqlite3": "7.4.6",
@@ -114,6 +114,17 @@
     "@lezer/common": "^1.0.0"
   },
   "resolutions": {
-    "codemirror": "5.65.11"
+      "**/codemirror": "5.65.11",
+      "**/protobufjs":"^7.2.4",
+      "**/tough-cookie":"^4.1.3",
+      "**/node-fetch":"^2.6.7",
+      "**/follow-redirects":"^1.14.8",
+      "**/axios":"0.27.2",
+      "**/jsonwebtoken":"^9.0.0",
+      "**/@strapi/utils":"4.12.5",
+      "**/semver":"^7.5.2",
+      "**/word-wrap":"^1.2.4",
+      "**/fast-xml-parser":"^4.2.4"
   }
+
 }
