--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "medusa-strapi",
-  "private": false,
-  "version": "0.1.4",
+  "private": true,
+  "version": "0.2.0",
   "type": "commonjs",
   "description": "Strapi Implementation for medusa market ",
   "repository": {
