--- a/.github/workflows/medusa-plugin-strapi-ts.yml
+++ b/.github/workflows/medusa-plugin-strapi-ts.yml
@@ -1,8 +1,9 @@
 name: medusa-plugin-strapi-ts
 on:
-  push:
+  push: 
     branches:
       - master
+      - 'release/**'
   pull_request:
     branches:
       - master
