--- a/packages/strapi-plugin-medusajs/package.json
+++ b/packages/strapi-plugin-medusajs/package.json
@@ -68,17 +68,8 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@strapi/logger": "4.13.1",
-    "@strapi/plugin-documentation": "4.13.1",
-    "@strapi/plugin-i18n": "4.13.1",
-    "@strapi/plugin-sentry": "4.13.1",
-    "@strapi/plugin-seo": "^1.7.5",
-    "@strapi/plugin-upload": "4.13.1",
-    "@strapi/plugin-users-permissions": "4.13.1",
-    "@strapi/provider-email-sendgrid": "4.13.1",
-    "@strapi/provider-upload-aws-s3": "4.13.1",
-    "@strapi/provider-upload-local": "4.13.1",
-    "@strapi/strapi": "4.13.1",
+    "@strapi/plugin-users-permissions": "^4.12.5",
+    "@strapi/strapi": "^4.12.5",
     "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
