--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -59,8 +59,8 @@
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.16",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "@medusajs/medusa": "^1.8.2",
@@ -77,6 +77,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.10.0",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^9.0.0",
     "medusa-core-utils": "^1.1.37",
