add TRANSFER_TOKEN_SALT for medusa-strapi

--- a/packages/medusa-strapi/.env.test
+++ b/packages/medusa-strapi/.env.test
@@ -5,6 +5,7 @@ APP_KEYS=ABCDEFABCDEFABCDEFABCD==,ABCDEFABCDEFACDOooOOOO==,TESTETESTESTESTESTTES
 ## Admin Settings
 
 API_TOKEN_SALT=ABCDEFABCDEFABCDEFABCD==
+TRANSFER_TOKEN_SALT=ABCDEFABCDEFABCDEFABCD==
 ADMIN_JWT_SECRET=ABCDEFABCDEFABCDEFABCD==
 
 ## Users-Permissions Plugin Settings
