--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -65,6 +65,7 @@
     "strapi-plugin-local-image-sharp": "*",
     "strapi-plugin-medusajs": "^4.0.10",
     "strapi-plugin-meilisearch": "^0.8.2",
+    "strapi-plugin-multi-country-select": "^1.2.0",
     "strapi-plugin-multi-select": "^1.1.0",
     "strapi-plugin-sgftech-multi-country-select": "^1.0.2",
     "strapi-plugin-sitemap": "^2.0.8",
@@ -115,6 +116,7 @@
     "@lezer/common": "^1.0.0"
   },
   "resolutions": {
-    "codemirror": "5.65.11"
+    "codemirror": "5.65.11",
+    "**/strapi-plugin-multi-country-select": "@npm:strapi-plugin-sgftech-multi-country-select"
   }
 }
