fix:docker-file

--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -26,7 +26,7 @@
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-format-url": "^3.78.0",
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
-    "@offset-dev/strapi-calendar": "^0.0.9",
+    "@offset-dev/strapi-calendar": "^0.0.10",
     "@sgftech/plugin-multi-country-select": "^1.0.2",
     "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
@@ -35,7 +35,7 @@
     "@strapi/plugin-documentation": "4.13.1",
     "@strapi/plugin-i18n": "4.13.1",
     "@strapi/plugin-sentry": "4.13.1",
-    "@strapi/plugin-seo": "1.7.5",
+    "@strapi/plugin-seo": "^1.9.5",
     "@strapi/plugin-upload": "4.13.1",
     "@strapi/plugin-users-permissions": "4.13.1",
     "@strapi/provider-email-sendgrid": "4.13.1",
