--- a/packages/medusa-strapi/Dockerfile.prod
+++ b/packages/medusa-strapi/Dockerfile.prod
@@ -1,23 +1,24 @@
 FROM node:16-alpine as build
 
 #AWS specific requirements
-RUN  apt update 
-RUN apt install -y curl
-RUN npm install -g n
+RUN apk update 
+RUN apk upgrade
+#RUN apk add -y curl
+#RUN npm install -g n
 
-RUN n 16
+#RUN n 16
 # Installing libvips-dev for sharp Compatibility
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev > /dev/null 2>&1
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 WORKDIR /opt/
-COPY ./package.json ./yarn.lock ./
 ENV PATH /opt/node_modules/.bin:$PATH
-RUN yarn config set network-timeout 600000 -g && yarn install --production
 WORKDIR /opt/app
-COPY ./ .
+COPY ./package.json ./
+COPY ./src ./src
 COPY ./public ./public
 COPY ./favicon.ico ./favicon.ico
+RUN yarn config set network-timeout 600000 -g && yarn install --production
 RUN yarn build
 
 
