fix: include development branch

--- a/.github/workflows/medusa-plugin-strapi-ts.yml
+++ b/.github/workflows/medusa-plugin-strapi-ts.yml
@@ -3,10 +3,12 @@ on:
   push: 
     branches:
       - master
+      - development
       - 'release/**'
   pull_request:
     branches:
       - master
+      - development
 
 jobs:
   unit-test:
