--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -15,10 +15,10 @@ name: Codacy Security Scan
 
 on:
   push:
-    branches: [ "master", 'release/**' ]
+    branches: [ "master", 'release/**','development' ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "master" ]
+    branches: [ "master","development" ]
   schedule:
     - cron: '26 9 * * 6'
 
