--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "master", 'release/**' ]
+    branches: [ "master", 'release/**' ,"development"]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "master" ]
+    branches: [ "master" , "development"]
   schedule:
     - cron: '18 8 * * 5'
 
