--- a/packages/medusa-strapi/Dockerfile.prod
+++ b/packages/medusa-strapi/Dockerfile.prod
@@ -27,8 +27,8 @@ RUN apk add --no-cache vips-dev
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 WORKDIR /opt/app
-COPY --from=build /opt/node_modules ./node_modules
-ENV PATH /opt/node_modules/.bin:$PATH
+COPY --from=build /opt/app/node_modules ./node_modules
+ENV PATH /opt/app/node_modules/.bin:$PATH
 COPY --from=build /opt/app ./
 EXPOSE 1337
 CMD ["yarn", "start"]
