--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -27,7 +27,6 @@
     "@aws-sdk/util-format-url": "^3.78.0",
     "@notum-cz/strapi-plugin-content-versioning": "^0.4.7",
     "@offset-dev/strapi-calendar": "^0.0.10",
-    "@sgftech/plugin-multi-country-select": "^1.0.2",
     "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
@@ -114,6 +113,7 @@
     "@lezer/common": "^1.0.0"
   },
   "resolutions": {
+    "**/strapi-plugin-multi-country-select": "@npm:strapi-plugin-sgftech-multi-country-select",
     "**/codemirror": "5.65.11",
     "**/protobufjs": "^7.2.4",
     "**/tough-cookie": "^4.1.3",
