--- a/packages/medusa-plugin-strapi-ts/package.json
+++ b/packages/medusa-plugin-strapi-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medusa-plugin-strapi-ts",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "description": "A plugin for medusa to use strapi in the backend as the cms in typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,8 +19,8 @@
     "e-commerce",
     "content management"
   ],
-  "funding":{
-    "type":"github",
+  "funding": {
+    "type": "github",
     "url": "https://github.com/sponsors/SGFGOV"
   },
   "author": "Govind Diwakar",
@@ -33,7 +33,7 @@
     "test": "jest --coverage --runInBand --setupFiles=dotenv/config "
   },
   "devDependencies": {
-    "@medusajs/medusa": "^1.8.2",
+    "@medusajs/medusa": "^1.16.1",
     "@strapi/plugin-users-permissions": "^4.6.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^27.4.0",
@@ -67,7 +67,8 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@medusajs/medusa": "^1.8.2",
+    "@medusajs/admin": "^7.1.2",
+    "@medusajs/medusa": "^1.16.1",
     "@strapi/plugin-users-permissions": "^4.6.1",
     "axios": "^0.27.2",
     "medusa-interfaces": "latest",
