--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
   },
   "homepage": "https://github.com/sgfgov/medusa-strapi-repo#readme",
   "dependencies": {
+    "class-validator": "^0.14.0",
+    "follow-redirects": "^1.14.8",
+    "protobufjs": "^7.2.4",
     "rimraf": "^3.0.1",
+    "strapi-plugin-multi-country-select": "npm:@sgftech/plugin-multi-country-select",
     "tsconfig.json": "^1.0.11"
   },
   "devDependencies": {
