--- a/packages/medusa-strapi/package.json
+++ b/packages/medusa-strapi/package.json
@@ -30,17 +30,17 @@
     "@sgftech/strapi-plugin-multi-country-select": "^1.0.1",
     "@strapi/design-system": "^1.4.1",
     "@strapi/icons": "^1.4.1",
-    "@strapi/logger": "4.13.1",
-    "@strapi/plugin-documentation": "4.13.1",
-    "@strapi/plugin-i18n": "4.13.1",
-    "@strapi/plugin-sentry": "4.13.1",
+    "@strapi/logger": "4.17.1",
+    "@strapi/plugin-documentation": "4.17.1",
+    "@strapi/plugin-i18n": "4.17.1",
+    "@strapi/plugin-sentry": "4.17.1",
     "@strapi/plugin-seo": "^1.9.5",
-    "@strapi/plugin-upload": "4.13.1",
-    "@strapi/plugin-users-permissions": "4.13.1",
-    "@strapi/provider-email-sendgrid": "4.13.1",
-    "@strapi/provider-upload-aws-s3": "4.13.1",
-    "@strapi/provider-upload-local": "4.13.1",
-    "@strapi/strapi": "4.13.1",
+    "@strapi/plugin-upload": "4.17.1",
+    "@strapi/plugin-users-permissions": "4.17.1",
+    "@strapi/provider-email-sendgrid": "4.17.1",
+    "@strapi/provider-upload-aws-s3": "4.17.1",
+    "@strapi/provider-upload-local": "4.17.1",
+    "@strapi/strapi": "4.17.1",
     "add": "^2.0.6",
     "codemirror": "5.65.11",
     "css-loader": "^6.7.1",
@@ -52,13 +52,15 @@
     "patch-package": "^6.5.0",
     "pg": "8.6.0",
     "qs": "^6.11.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
     "sentry": "^0.1.2",
     "sharp": "^0.32.6",
     "strapi-google-translator": "^1.0.7",
     "strapi-middleware-cache": "^2.1.8",
     "strapi-plugin-comments": "^2.2.3",
     "strapi-plugin-country-select": "^1.0.0",
-    "strapi-plugin-generate-data": "^1.0.21",
     "strapi-plugin-io": "^1.1.2",
     "strapi-plugin-local-image-sharp": "*",
     "strapi-plugin-medusajs": "^5.0.0",
@@ -66,7 +68,8 @@
     "strapi-plugin-multi-select": "^1.1.0",
     "strapi-plugin-sitemap": "^2.0.8",
     "strapi-plugin-sso-medusa": "^1.0.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "styled-components": "^5.2.1"
   },
   "author": {
     "name": "A Strapi developer"
@@ -86,7 +89,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@strapi/admin": "4.13.1",
+    "@strapi/admin": "4.17.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
@@ -120,7 +123,7 @@
     "**/follow-redirects": "^1.14.8",
     "**/axios": "0.27.2",
     "**/jsonwebtoken": "^9.0.0",
-    "**/@strapi/utils": "4.13.1",
+    "**/@strapi/utils": "4.17.1",
     "**/semver": "^7.5.2",
     "**/word-wrap": "^1.2.4",
     "**/fast-xml-parser": "^4.2.4"
